resolved text overflow bad behaviour.

--- a/src/orbital-designer/src/app/components/endpoint-view/overview/overview.component.scss
+++ b/src/orbital-designer/src/app/components/endpoint-view/overview/overview.component.scss
@@ -58,6 +58,9 @@
     font-weight: 500;
     font-size: 1.4em;
     color: rgba(0, 0, 0, 0.87);
+    //overflow-x: hidden;
+    overflow-y: auto;
+    word-wrap: break-word;
   }
 
   .mock-description p{
@@ -65,8 +68,10 @@
     font-style: normal;
     font-weight: normal;
     letter-spacing: 0.08em;
+    //text-overflow: ellipsis;
     font-size: 1.2em;
     line-height: 1.8em;
     overflow-y: auto;
     color: rgba(0, 0, 0, 0.541327);
+    word-wrap: break-word;
   }
